--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <title>Class Memory Verses (NIV)</title>
-
-  <!-- Google Font Import (Optional) -->
+  <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap" rel="stylesheet">
-
+  <link 
+    href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;700&family=Open+Sans:wght@400;600&display=swap" 
+    rel="stylesheet"
+  >
   <!-- CSS -->
   <link rel="stylesheet" href="styles.css">
 </head>
@@ -16,30 +17,34 @@
     <h1>Class Memory Verses (NIV)</h1>
   </header>
 
-  <!-- Navigation / Toolbar (Optional) -->
+  <!-- Optional Navigation -->
   <nav>
     <ul>
-      <li><button id="toggleButton">Hide/Show All Verses</button></li>
+      <li><button id="toggleButton">Hide/Show Verses</button></li>
     </ul>
   </nav>
 
   <main id="verses-container">
+    <!-- Verse 1 -->
     <article class="verse-card">
       <h2>Proverbs 24:12 (NIV)</h2>
       <p>
-        “If you say, ‘But we knew nothing about this,’ does not he who weighs the heart perceive it? Does not he who guards 
-        your life know it? Will he not repay everyone according to what they have done?”
+        “If you say, ‘But we knew nothing about this,’ does not he who weighs the heart perceive it? 
+        Does not he who guards your life know it? Will he not repay everyone according to what they have done?”
       </p>
     </article>
 
+    <!-- Verse 2 -->
     <article class="verse-card">
       <h2>Revelation 2:26-27 (NIV)</h2>
       <p>
-        “To the one who is victorious and does my will to the end, I will give authority over the nations—that one ‘will rule 
-        them with an iron scepter and will dash them to pieces like pottery’—just as I have received authority from my Father.”
+        “To the one who is victorious and does my will to the end, I will give authority over the nations— 
+        that one ‘will rule them with an iron scepter and will dash them to pieces like pottery’—
+        just as I have received authority from my Father.”
       </p>
     </article>
 
+    <!-- Verse 3 -->
     <article class="verse-card">
       <h2>James 5:19-20 (NIV)</h2>
       <p>
@@ -49,6 +54,7 @@
       </p>
     </article>
 
+    <!-- Verse 4 -->
     <article class="verse-card">
       <h2>Jeremiah 5:14 (NIV)</h2>
       <p>
@@ -57,6 +63,7 @@
       </p>
     </article>
 
+    <!-- Verse 5 -->
     <article class="verse-card">
       <h2>2 Peter 3:10-13 (NIV)</h2>
       <p>
@@ -67,14 +74,16 @@
       </p>
     </article>
 
+    <!-- Verse 6 -->
     <article class="verse-card">
       <h2>James 1:5-8 (NIV)</h2>
       <p>
-        “If any of you lacks wisdom, you should ask God, who gives generously to all without finding fault, and it will 
-        be given to you. But when you ask, you must believe and not doubt...”
+        “If any of you lacks wisdom, you should ask God, who gives generously to all without finding fault, 
+        and it will be given to you. But when you ask, you must believe and not doubt...”
       </p>
     </article>
 
+    <!-- Verse 7 -->
     <article class="verse-card">
       <h2>Exodus 25:8-9 (NIV)</h2>
       <p>
@@ -83,6 +92,7 @@
       </p>
     </article>
 
+    <!-- Verse 8 -->
     <article class="verse-card">
       <h2>Malachi 3:1 (NIV)</h2>
       <p>
@@ -91,6 +101,7 @@
       </p>
     </article>
 
+    <!-- Verse 9 -->
     <article class="verse-card">
       <h2>Revelation 19:7-8 (NIV)</h2>
       <p>
@@ -100,6 +111,7 @@
       </p>
     </article>
 
+    <!-- Verse 10 -->
     <article class="verse-card">
       <h2>Acts 17:18-19 (NIV)</h2>
       <p>
@@ -114,20 +126,21 @@
 
   <footer>
     <p>
-      &copy; 2025 Memory Verses Collection  
-      <br>
-      Scripture quotations are from the Holy Bible, New International Version® (NIV®).  
+      &copy; 2025 Memory Verses Collection<br>
+      Scripture quotations are from the Holy Bible, New International Version&reg; (NIV&reg;).<br>
       <small>
-        Copyright ©1973, 1978, 1984, 
-        2011 by Biblica, Inc. Used by permission. All rights reserved worldwide.
+        Copyright &copy;1973, 1978, 
+        1984, 2011 by Biblica, Inc.<br>
+        Used by permission. All rights reserved worldwide.
       </small>
     </p>
   </footer>
 
-  <!-- Optional JavaScript -->
+  <!-- Optional JS File -->
   <script src="app.js"></script>
 </body>
 </html>
+
 
 
 
