--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
     <h1>Class Memory Verses (NIV)</h1>
   </header>
 
-  <!-- Navigation bar with a global toggle button & an 'Add Verse' button -->
   <nav>
     <ul>
       <li><button id="toggleAllButton">Hide/Show All Verses</button></li>
@@ -25,7 +24,7 @@
     </ul>
   </nav>
 
-  <!-- FORM for adding new verses (initially hidden via CSS) -->
+  <!-- Section for adding new verses -->
   <section id="add-verse-form-section">
     <h2>Add a New Verse</h2>
     <form id="add-verse-form">
@@ -42,42 +41,10 @@
   </section>
 
   <main id="verses-container">
-    <!-- Existing verses go here; for brevity, showing a couple of examples -->
+    <!-- Sample Verse 1 -->
     <article class="verse-card">
-      <h2>Proverbs 24:12 (NIV)</h2>
-      <p class="verse-text">
-        “If you say, ‘But we knew nothing about this,’ does not he who weighs the heart perceive it? 
-        Does not he who guards your life know it? Will he not repay everyone according to what they have done?”
-      </p>
-    </article>
+      <h2>Pro
 
-    <article class="verse-card">
-      <h2>Revelation 2:26-27 (NIV)</h2>
-      <p class="verse-text">
-        “To the one who is victorious and does my will to the end, I will give authority over the nations— 
-        that one ‘will rule them with an iron scepter and will dash them to pieces like pottery’—
-        just as I have received authority from my Father.”
-      </p>
-    </article>
-    <!-- ... Add additional verses here ... -->
-  </main>
-
-  <footer>
-    <p>
-      &copy; 2025 Memory Verses Collection<br>
-      Scripture quotations are from the Holy Bible, New International Version&reg; (NIV&reg;).<br>
-      <small>
-        Copyright &copy;1973, 1978,
-        1984, 2011 by Biblica, Inc.<br>
-        Used by permission. All rights reserved worldwide.
-      </small>
-    </p>
-  </footer>
-
-  <!-- JavaScript -->
-  <script src="app.js"></script>
-</body>
-</html>
 
 
 
