--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <h2>Add a New Verse</h2>
     <form id="add-verse-form">
       <div class="form-field">
-        <label for="verseReference">Verse Reference (e.g., Romans 8:28 NIV):</label>
+        <label for="verseReference">Verse Reference (e.g., John 3:16 NIV):</label>
         <input type="text" id="verseReference" name="verseReference" required />
       </div>
       <div class="form-field">
@@ -41,9 +41,44 @@
   </section>
 
   <main id="verses-container">
-    <!-- Sample Verse 1 -->
+    <!-- Example Verse 1 -->
     <article class="verse-card">
-      <h2>Pro
+      <h2>Proverbs 24:12 (NIV)</h2>
+      <p class="verse-text">
+        “If you say, ‘But we knew nothing about this,’ does not he who weighs the heart perceive it? 
+        Does not he who guards your life know it? Will he not repay everyone according to what they have done?”
+      </p>
+    </article>
+
+    <!-- Example Verse 2 -->
+    <article class="verse-card">
+      <h2>Revelation 2:26-27 (NIV)</h2>
+      <p class="verse-text">
+        “To the one who is victorious and does my will to the end, I will give authority over the nations— 
+        that one ‘will rule them with an iron scepter and will dash them to pieces like pottery’—
+        just as I have received authority from my Father.”
+      </p>
+    </article>
+    <!-- ... Add additional verse cards as desired ... -->
+  </main>
+
+  <footer>
+    <p>
+      &copy; 2025 Memory Verses Collection<br>
+      Scripture quotations are from the Holy Bible, New International Version&reg; (NIV&reg;).<br>
+      <small>
+        Copyright &copy;1973, 
+        1978, 1984, 2011 by Biblica, Inc.<br>
+        Used by permission. All rights reserved worldwide.
+      </small>
+    </p>
+  </footer>
+
+  <!-- JavaScript -->
+  <script src="app.js"></script>
+</body>
+</html>
+
 
 
 
